k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
        version: v1.0.0
    spec:
      containers:
      - name: product-service
        image: rokaa666/product-service:v1.0.0
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /api/products/
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/products/
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: prod
spec:
  selector:
    app: product-service
  ports:
  - port: 8000
    name: http
  type: ClusterIP
